--- a/frontend/src/app/client/header/header.component.html
+++ b/frontend/src/app/client/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<header class="header">
+    <a class="navbar-brand" href="#">
+        <img src="assets\Shared\logo.png" style="width: 75px; image-rendering: optimizeQuality"/>
+    </a>
+
+    <div class="d-flex">
+        <div class="search">
+          <input type="text" class="search-input" placeholder="Tìm kiếm..." />
+          <a><i class="fas fa-search fa-lg" style="color: #f1f1f1; font-size: 1.5rem"></i></a>
+        </div>
+      </div>
+
+    <nav class="navbar">
+        <a class="nav-link" aria-current="page" href="#">Mua Sắm</a>
+        <a class="nav-link" href="#"><i class="fas fa-user-circle" style="color: #f1f1f1; font-size: 1.5rem"></i></a>
+        <a class="nav-link" href="#"><i class="fas fa-shopping-bag" style="color: #f1f1f1; font-size: 1.5rem"></i></a>
+    </nav>
+</header>
