--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<body class="vh-100 justify-content-center align-items-center d-flex">
+  <div class="bg-dark loginbox">
+    <div class="form">
+      <div class="text-center p-3">Đăng nhập</div>
+    </div>
+    <div class="right"></div>
+  </div>
+</body>
