--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -1,1 +1,5 @@
-<p>homepage works!</p>
+<div id="background_image">
+  <div class="container text-center">
+    <button type="button" id="bt">MUA NGAY</button>
+  </div>
+</div>
