--- a/frontend/src/app/client/homepage/homepage.component.css
+++ b/frontend/src/app/client/homepage/homepage.component.css
@@ -2,11 +2,50 @@ body{
   background: #FEFEFE;
 }
 .imageSlider1{
-  height: 100%;
   width:100%;
+  height: 700px;
 }
 
 .imageSlider2{
-  height: 100%;
+  height: 500px;
   width:100%;
 }
+
+
+
+  @font-face {
+     font-family: balloTamma;
+     src: url(../../../assets/fonts/Baloo-Regular.ttf);
+  }
+
+  .h1 {
+     font-family: balloTamma;
+     color: #EAD1A5;
+     text-align: center;
+     margin-top: 1%;
+  }
+
+.tieudenho{
+  font-family: balloTamma;
+  color: #5581A5;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 1%;
+}
+.noidungnho{
+  color: #6F6F6F;
+  text-align: center;
+  font-size: 20px;
+  margin-top: -15px;
+  text-wrap:pretty;
+  font-weight: 500;
+  word-wrap: break-word;
+  width: 70%;
+  margin-left: 14%;
+}
+.item{
+  width: 40%;
+  height: fit-content;
+  margin-left: 7.5%;
+}
+
