--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,7 +1,18 @@
 <body class="vh-100 justify-content-center align-items-center d-flex">
-  <div class="bg-dark loginbox">
+  <div class="loginbox row">
     <div class="form">
-      <div class="text-center p-3">Đăng nhập</div>
+      <div
+        class="row text-center justify-content-center align-items-center"
+        style="height: 30%"
+      >
+        <p id="loginText" style="font-size: 3vw; font-family: sans-serif">
+          Đăng nhập
+        </p>
+      </div>
+      <div class="row m-0">dsd</div>
+      <div class="row m-0">trtr</div>
+      <div class="row m-0">wewe</div>
+      <div class="row m-0">sds</div>
     </div>
     <div class="right"></div>
   </div>
