--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,19 +1,32 @@
-.column-content{
-    width: 30%;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+body {
+  margin: 0;
+  padding: 0;
 }
-.loginbox
-{
-    display: flex;
-    height: 80%;
-    width: 70%;
+.column-content {
+  width: 30%;
 }
-.form
-{
-    width: 70%;
-    background-color: red;
+.loginbox {
+  display: flex;
+  height: 80%;
+  width: 70%;
 }
-.right
-{
-    width:30%;
-    background-color: aqua;
+.form {
+  width: 70%;
+  border-radius: 8px;
+  background: #F8F8F8;
+  box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+#loginText{
+color: #D9673A;
+font-size: 45px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+.right {
+  width: 30%;
+  border-radius: 0px 8px 8px 0px;
+  background: linear-gradient(0deg, #4278bd 0%, #a8cae4 100%);
+  box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
