--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -3,3 +3,31 @@
     <button type="button" id="bt">MUA NGAY</button>
   </div>
 </div>
+<div id="margin-top">
+  <div class="d-flex justify-content-center">
+    <div id="khung-muasam">
+      <div class="d-flex justify-content-start" id="font-muasam">Mua Sắm</div>
+      <div class="row d-flex justify-content-between align-items-center h-100">
+        <div id="khung-item" style="margin-left: 110px">
+          <img src="/assets/Hompage/Cá_chúa_hề.png" alt="" />
+          <p id="font-name">Cá Chúa hề</p>
+          <p id="font-gia">3.000Đ</p>
+        </div>
+        <div id="khung-item">
+          <img
+            src="/assets/Hompage/Cá_vây_nâu.png"
+            alt=""
+            style="margin-left: 60px; margin-bottom: 60px; margin-top:20px;"
+          />
+          <p id="font-name">Cá Vây Nâu</p>
+          <p id="font-gia">70.000Đ</p>
+        </div>
+        <div id="khung-item" style="margin-right: 110px">
+          <img src="/assets/Hompage/Ca_nóc.png" alt="" style="margin-left: 50px; margin-bottom: 45px; margin-top: 20px;"/>
+          <p id="font-name">Cá nóc</p>
+          <p id="font-gia">3.000Đ</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
