--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -14,15 +14,25 @@ body {
 .form {
   width: 70%;
   border-radius: 8px;
-  background: #F8F8F8;
+  background: #f8f8f8;
   box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-#loginText{
-color: #D9673A;
-font-size: 45px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+#loginText {
+  color: #d9673a;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.form-control{
+  background: #DEDEDE;}
+#Submit {
+  border-radius: 15px;
+  background: #4a7ec0;
+  color: #ffffff;
+  padding:10px 30px 10px 30px;
+  border: none;
+  font-weight: bold;
 }
 .right {
   width: 30%;
