--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,16 +3,44 @@
     <div class="form">
       <div
         class="row text-center justify-content-center align-items-center"
-        style="height: 30%"
+        style="height: 40%"
       >
         <p id="loginText" style="font-size: 3vw; font-family: sans-serif">
           Đăng nhập
         </p>
       </div>
-      <div class="row m-0">dsd</div>
-      <div class="row m-0">trtr</div>
-      <div class="row m-0">wewe</div>
-      <div class="row m-0">sds</div>
+      <!--  -->
+      <div class="row m-0">
+        <form>
+          <div class="input-group form-group pb-2">
+            <span class="input-group-text">
+              <i class="fa-solid fa-user" style="color: #cfcfcf"></i>
+            </span>
+            <input
+              type=" email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Tên đăng nhập"
+            />
+          </div>
+          <div class="input-group form-group">
+            <span class="input-group-text">
+              <i class="fa-solid fa-lock" style="color: #cfcfcf"></i>
+            </span>
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              placeholder="Mật khẩu"
+            />
+          </div>
+          <p class="text-center pt-3" style="color: #7e7a7a">Quên mật khẩu?</p>
+          <div class="d-flex justify-content-center align-items-center">
+            <button type="submit" id="Submit">Đăng nhập</button>
+          </div>
+        </form>
+      </div>
     </div>
     <div class="right"></div>
   </div>
