--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -17,13 +17,13 @@
           <img
             src="/assets/Hompage/Cá_vây_nâu.png"
             alt=""
-            style="margin-left: 60px; margin-bottom: 60px; margin-top:20px;"
+            id="img-size"
           />
           <p id="font-name">Cá Vây Nâu</p>
           <p id="font-gia">70.000Đ</p>
         </div>
         <div id="khung-item" style="margin-right: 110px">
-          <img src="/assets/Hompage/Ca_nóc.png" alt="" style="margin-left: 50px; margin-bottom: 45px; margin-top: 20px;"/>
+          <img src="/assets/Hompage/Ca_nóc.png" alt="" id="img-size"/>
           <p id="font-name">Cá nóc</p>
           <p id="font-gia">3.000Đ</p>
         </div>
