--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -1,44 +1,45 @@
 <!--banner1-->
 <ngb-carousel
-	*ngIf="images1"
-	[showNavigationArrows]="true"
-	[showNavigationIndicators]="true"
+  *ngIf="images1"
+  [showNavigationArrows]="true"
+  [showNavigationIndicators]="true"
 >
-	<ng-template ngbSlide *ngFor="let image of images1">
-		<div class="picsum-img-wrapper">
-			<img [src]="image" class="imageSlider1"/>
-		</div>
-	</ng-template>
+  <ng-template ngbSlide *ngFor="let image of images1">
+    <div class="picsum-img-wrapper">
+      <img [src]="image" class="imageSlider1" />
+    </div>
+  </ng-template>
 </ngb-carousel>
 
-<img src="../../../assets/images/bannerB1.png" class="image2">
+<img src="../../../assets/images/bannerB1.png" class="image2" />
 
 <!--tiêu đề-->
 <h1 class="h1">Các Giống Cá Đến Từ</h1>
-<div class="ItemList">
+<div class="row">
   <div class="item">
-    <img src="../../../assets/images/andoduong.png" class="imageItem">
+    <img src="../../../assets/images/andoduong.png" class="imageItem" />
     <p class="tieudenho">Ấn Độ Dương</p>
     <p class="noidungnho">Cực kỳ đa dạng các loài cá nhiệt đới</p>
   </div>
-  <div  class="item">
-    <img src="../../../assets/images/andoduong.png" class="imageItem">
+  <div class="item">
+    <img src="../../../assets/images/andoduong.png" class="imageItem" />
     <p class="tieudenho">Thái Bình Dương</p>
     <p class="noidungnho">Có nhiều rặng san hô đầy màu sắc</p>
   </div>
   <div class="item">
-    <img src="../../../assets/images/andoduong.png" class="imageItem">
+    <img src="../../../assets/images/andoduong.png" class="imageItem" />
     <p class="tieudenho">Bắc Băng Dương</p>
     <p class="noidungnho">Thường có những loài cá quý hiếm</p>
   </div>
   <div class="item">
-    <img src="../../../assets/images/andoduong.png" class="imageItem">
+    <img src="../../../assets/images/andoduong.png" class="imageItem" />
     <p class="tieudenho">Nam Đại Dương</p>
-    <p class="noidungnho">Có nhiều loài cá rất được ưa chuộng vì đặc tính dễ nuôi</p>
+    <p class="noidungnho">
+      Có nhiều loài cá rất được ưa chuộng vì đặc tính dễ nuôi
+    </p>
   </div>
 </div>
-
-
+<!--  -->
 <div id="background_image">
   <div class="container text-center">
     <button type="button" id="bt">MUA NGAY</button>
@@ -58,13 +59,17 @@
           <img
             src="/assets/Hompage/Cá_vây_nâu.png"
             alt=""
-            style="margin-left: 60px; margin-bottom: 60px; margin-top:20px;"
+            style="margin-left: 60px; margin-bottom: 60px; margin-top: 20px"
           />
           <p id="font-name">Cá Vây Nâu</p>
           <p id="font-gia">70.000Đ</p>
         </div>
         <div id="khung-item" style="margin-right: 110px">
-          <img src="/assets/Hompage/Ca_nóc.png" alt="" style="margin-left: 50px; margin-bottom: 45px; margin-top: 20px;"/>
+          <img
+            src="/assets/Hompage/Ca_nóc.png"
+            alt=""
+            style="margin-left: 50px; margin-bottom: 45px; margin-top: 20px"
+          />
           <p id="font-name">Cá nóc</p>
           <p id="font-gia">3.000Đ</p>
         </div>
