Fix lại hình có button trang homepage

--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -1,10 +1,9 @@
-<div id="background_image">
-  <div class="container text-center">
-    <button type="button" id="bt">MUA NGAY</button>
+<div class="d-flex justify-content-center khung-1">
+    <img src="/assets/Hompage/background_water.jpg" class="bg-resize" alt="" />
+    <button class="btn-1">MUA NGAY</button>
   </div>
-</div>
-<div id="margin-top">
-  <div class="d-flex justify-content-center">
+
+  <div class="d-flex justify-content-center mt-5">
     <div id="khung-muasam">
       <div class="d-flex justify-content-start" id="font-muasam">Mua Sắm</div>
       <div class="row d-flex justify-content-between align-items-center h-100">
@@ -14,20 +13,15 @@
           <p id="font-gia">3.000Đ</p>
         </div>
         <div id="khung-item">
-          <img
-            src="/assets/Hompage/Cá_vây_nâu.png"
-            alt=""
-            id="img-size"
-          />
+          <img src="/assets/Hompage/Cá_vây_nâu.png" alt="" id="img-size" />
           <p id="font-name">Cá Vây Nâu</p>
           <p id="font-gia">70.000Đ</p>
         </div>
         <div id="khung-item" style="margin-right: 110px">
-          <img src="/assets/Hompage/Ca_nóc.png" alt="" id="img-size"/>
+          <img src="/assets/Hompage/Ca_nóc.png" alt="" id="img-size" />
           <p id="font-name">Cá nóc</p>
           <p id="font-gia">3.000Đ</p>
         </div>
       </div>
     </div>
   </div>
-</div>
