--- a/frontend/src/app/client/homepage/homepage.component.css
+++ b/frontend/src/app/client/homepage/homepage.component.css
@@ -1,37 +1,57 @@
-#background_image{
-  background-image: url(/assets/Hompage/background_water.jpg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height : 1030px
-}
-#bt
-{
+.khung-1 {
   position: relative;
-  right: 650px;
-  top: 670px;
-  border-radius: 35px;
-  border-color: white;
-  padding: 20px;
-  padding-inline-end: 80px ;
-  padding-inline-start: 80px ;
-  font: "Inter";
-  font-weight: bold;
-  box-shadow: 0px 0px 10px black;
-  cursor: pointer;
-  transition: 0.2s;
-  color: #316CB7;
-  background: white;
+  width: 100%;
 }
-#bt:hover
-{
-  background-color: #cccaca;
+.khung-1 .bg-resize {
+  width: 100vw;
 }
-#margin-top
-{
-  margin-top: 30px;
+.khung-1 .btn-1 {
+  position: absolute;
+  top: 60%;
+  right: 78%;
+  width: 262px;
+  height: 77px;
+  border-radius: 40px;
+  background: #fffefe;
+  box-shadow: 2px 4px 10px 2px rgba(0, 0, 0, 0.25);
+  color: #316cb7;
+  font-family: Inter;
+  font-size: 25px;
+  font-weight: 800;
+  text-align: center;
 }
+
+@media screen and (max-width:1123px){
+  .khung-1 .btn-1 {
+    top: 60%;
+    right: 77%;
+    width: 230px;
+    height: 70px;
+    font-size: 25px;
+  }
+  @media screen and (max-width:951px) {
+    .khung-1 .btn-1 {
+      top: 60%;
+      right: 77%;
+      width: 180px;
+      height: 55px;
+      font-size: 22px;
+    }
+  }
+  @media screen and (max-width:777px) {
+    .khung-1 .btn-1 {
+      top: 60%;
+      right: 77%;
+      width: 150px;
+      height: 50px;
+      font-size: 20px;
+    }
+  }
+}
+
 #khung-muasam
 {
+  position: relative;
   background-image: url(/assets/Hompage/background_khung_muasam.png);
   background-repeat: no-repeat;
   width: 90.2vw;
@@ -52,9 +72,9 @@
   font-family: "Inter";
   font-weight: bold;
   color:#316CB7;
-  position: relative;
-  left : 90px;
-  top: 50px;
+  position: absolute;
+  left : 7%;
+  top: 10%;
 }
 #font-name{
   font-size: 2rem;
