--- a/frontend/src/app/client/header/header.component.css
+++ b/frontend/src/app/client/header/header.component.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   backdrop-filter: blur(10px);
   border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  z-index: 1;
 }
 
 .container{
