--- a/frontend/src/app/client/footer/footer.component.html
+++ b/frontend/src/app/client/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="container">
+        <div class="row d-flex justify-content-between">
+            <div class="footer-col">
+                
+            </div>
+            <div class="footer-col" style="width: 40%;">
+                <h4>Thông Tin Liên Hệ</h4>
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-phone" style="color: #f9f9f9;"></i>
+                        +84 985 632 100 (Mr. abc)
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-envelope" style="color: #f9f9f9;"></i>
+                        zone14@customerservice.com
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-compass" style="color: #f9f9f9;"></i>
+                        828 Sư Vạn Hạnh, phường 12, quận 10, HCMC
+                    </li>
+                </ul>
+                <div class="social-links">
+                    <a href="#"><i class="fa-brands fa-facebook" style="color: #D0DAF5;"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter" style="color: #D0DAF5;"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram" style="color: #D0DAF5;"></i></a>
+                </div>
+            </div>
+            <div class="footer-col">
+                <h4>Thông Tin</h4>
+                <ul>
+                    <li><a href="#">Trang Chủ</a></li>
+                    <li><a href="#">Giới Thiệu</a></li>
+                    <li><a href="#">Mua Sắm</a></li>
+                    <li><a href="#">Liên Hệ Cung Ứng</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row" style="margin-top: 10px;">
+            <div class="col-md-12 text-center" >
+                <hr class="hr" style="  padding-top: 7px;" />
+                <p style="color: rgb(227, 207, 171);">Copyright © 2023 Zone14 Company. All rights reserved.</p></div>
+        </div>
+    </div>
+</div>
