--- a/frontend/src/app/client/footer/footer.component.html
+++ b/frontend/src/app/client/footer/footer.component.html
@@ -1,26 +1,25 @@
 <div class="footer">
+    <div class ="d-flex"> 
+           <img src="assets\Shared\anh_footer.png" id="image">
     <div class="container">
-        <div class="row d-flex justify-content-between">
-            <div class="footer-col">
-                
-            </div>
-            <div class="footer-col" style="width: 40%;">
-                <h4>Thông Tin Liên Hệ</h4>
+        <div class="row">
+            <div class="footer-col ps-5" id="col_larger">
+                <img src="assets\Shared\ten_web.png" id="ten_web">
                 <ul>
                     <li>
-                        <i class="fa-solid fa-phone" style="color: #f9f9f9;"></i>
+                        <i class="fa-solid fa-phone pe-2" style="color: #f9f9f9;"></i>
                         +84 985 632 100 (Mr. abc)
                     </li>
                     <li>
-                        <i class="fa-solid fa-envelope" style="color: #f9f9f9;"></i>
+                        <i class="fa-solid fa-envelope pe-2" style="color: #f9f9f9;"></i>
                         zone14@customerservice.com
                     </li>
                     <li>
-                        <i class="fa-solid fa-compass" style="color: #f9f9f9;"></i>
-                        828 Sư Vạn Hạnh, phường 12, quận 10, HCMC
+                        <i class="fa-solid fa-compass pe-2" style="color: #f9f9f9;"></i>
+                        828 Sư Vạn Hạnh, phường 12, quận 10, TP. Hồ Chí Minh
                     </li>
                 </ul>
-                <div class="social-links">
+                <div class="social-links ">
                     <a href="#"><i class="fa-brands fa-facebook" style="color: #D0DAF5;"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter" style="color: #D0DAF5;"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram" style="color: #D0DAF5;"></i></a>
@@ -36,10 +35,13 @@
                 </ul>
             </div>
         </div>
-        <div class="row" style="margin-top: 10px;">
+        
+       </div>
+
+    </div>
+     <div class="row" style="margin-top: 10px;">
             <div class="col-md-12 text-center" >
-                <hr class="hr" style="  padding-top: 7px;" />
+                <hr class="pt-2 mx-4"/>
                 <p style="color: rgb(227, 207, 171);">Copyright © 2023 Zone14 Company. All rights reserved.</p></div>
         </div>
-    </div>
 </div>
