Chỉnh sửa header
- chỉnh sửa css cho logo

--- a/frontend/src/app/client/header/header.component.html
+++ b/frontend/src/app/client/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     <a class="navbar-brand" href="#">
-        <img src="assets\Shared\logo.png" style="width: 75px; image-rendering: optimizeQuality"/>
+        <img src="assets\Shared\logo.png" id="logo"/>
     </a>
 
     <!-- <div class="d-flex">
