--- a/frontend/src/app/client/footer/footer.component.html
+++ b/frontend/src/app/client/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class ="d-flex"> 
-           <img src="assets\Shared\anh_footer.png" id="image">
+        <img src="assets\Shared\anh_footer.png" id="image">
     <div class="container">
         <div class="row">
             <div class="footer-col ps-5" id="col_larger">
@@ -35,13 +35,12 @@
                 </ul>
             </div>
         </div>
-        
-       </div>
+    </div>
 
     </div>
-     <div class="row" style="margin-top: 10px;">
+        <div class="row mt-10">
             <div class="col-md-12 text-center" >
                 <hr class="pt-2 mx-4"/>
-                <p style="color: rgb(227, 207, 171);">Copyright © 2023 Zone14 Company. All rights reserved.</p></div>
+                <p>Copyright © 2023 Filet - O - Fish Company. All rights reserved.</p></div>
         </div>
 </div>
