--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,60 +1,89 @@
-<body class="vh-100 justify-content-center align-items-center d-flex mt-5">
-  <div class="loginbox row">
-    <div class="form">
-      <div
-        class="row text-center justify-content-center align-items-center"
-        style="height: 40%"
-      >
-        <!-- Header -->
-        <p id="loginText" style="font-size: 3vw; font-family: sans-serif">
-          Đăng nhập
-        </p>
-      </div>
-      <!-- Body-login -->
-      <div class="row m-0">
-        <form>
-          <!-- Input Username -->
-          <div class="input-group form-group pb-2">
-            <span class="input-group-text style-change">
-              <i class="fa-solid fa-user" style="color: #777777"></i>
-            </span>
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Tên đăng nhập"
-            />
-          </div>
-          <!-- Input Password -->
-          <div class="input-group form-group">
-            <span class="input-group-text style-change">
-              <i class="fa-solid fa-lock" style="color: #777777"></i>
-            </span>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-              placeholder="Mật khẩu"
-            />
-          </div>
-          <!-- Button Submit -->
-          <p class="text-center pt-3" style="color: #7e7a7a">Quên mật khẩu?</p>
-          <div class="d-flex justify-content-center align-items-center">
-            <button type="submit" id="Submit">Đăng nhập</button>
-          </div>
-        </form>
-      </div>
+<body>
+  <div class="container" #container>
+    <div class="form-container sign-up-container">
+      <form action="#">
+        <p class="p-change-3">Đăng ký</p>
+        <div>
+          <p style="margin-bottom: 0">Họ và tên</p>
+          <input
+            class="input-dang-ki mb-2"
+            type="text"
+            placeholder="Nhập họ và tên"
+          />
+          <p style="margin-bottom: 0">Email</p>
+          <input
+            class="input-dang-ki mb-2"
+            type="email"
+            placeholder="Nhập email"
+          />
+          <p style="margin-bottom: 0">Số điện thoại</p>
+          <input
+            class="input-dang-ki mb-2"
+            type="number"
+            placeholder="Nhập số điện thoại"
+          />
+          <p style="margin-bottom: 0">Mật khẩu</p>
+          <input
+            class="input-dang-ki mb-2"
+            type="password"
+            placeholder="Nhập mật khẩu"
+          />
+        </div>
+        <button class="btn-form mt-4 me-1">Đăng ký</button>
+      </form>
     </div>
-    <div class="right justify-content-center align-items-center d-flex">
-      <div class="form-2">
-        <img src="/assets/Login/log-Filet-O-Fish.png" class="mb-5 img-responsive" />
-        <p id="chao-ban-moi">Chào bạn mới</p>
-        <div style="margin-top: 60px;" class="text-center">
-          <p id="p-1">Bạn chưa có tài khoản ?</p>
-          <p id="p-2">Đăng nhập ngay</p>
+    <div class="form-container sign-in-container">
+      <form action="#">
+        <h1 class="p-change-3 mb-5">Đăng Nhập</h1>
+        <div class="input-group form-group ms-4">
+          <span class="input-group-text" style="background: #dedede">
+            <i class="fa-solid fa-user" style="color: #777777"></i>
+          </span>
+          <input
+            class="input-dang-nhap"
+            type="email"
+            placeholder="Tên đăng nhập"
+          />
+        </div>
+        <div class="input-group form-group ms-4 mt-3">
+          <span class="input-group-text" style="background: #dedede">
+            <i class="fa-solid fa-lock" style="color: #777777"></i>
+          </span>
+          <input
+            class="input-dang-nhap"
+            type="password"
+            placeholder="Mật khẩu"
+          />
+        </div>
+        <a href="#" class="mt-3" style="color: #7e7a7a">Quên mật khẩu ?</a>
+        <button class="btn-form mt-4">Đăng nhập</button>
+      </form>
+    </div>
+    <!-- khung overlay -->
+    <div class="overlay-container" id="overlayCon">
+      <div class="overlay">
+        <div class="overlay-panel overlay-left">
+          <img
+            src="/assets/Login/log-Filet-O-Fish.png"
+            alt=""
+            class="img-resize"
+          />
+          <p class="Welcome-back">Chào mừng quay về</p>
+          <p class="p-1">Nếu đã có tài khoản,</p>
+          <p class="p-2">Đăng nhập ngay !</p>
+        </div>
+        <div class="overlay-panel overlay-right">
+          <img
+            src="/assets/Login/log-Filet-O-Fish.png"
+            alt=""
+            class="img-resize"
+          />
+          <p class="chao-ban-moi">Chào người mới</p>
+          <p class="p-1" style="margin-bottom: 0px">Bạn chưa có tài khoản ?</p>
+          <p class="p-2">Đăng ký ngay !</p>
         </div>
       </div>
+      <button class="overlayBtn"></button>
     </div>
   </div>
 </body>
