--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,1 +1,24 @@
-<p>register works!</p>
+<body class="vh-100 justify-content-center align-items-center d-flex mt-5">
+  <div class="registerbox row">
+    <!-- ben trai -->
+    <div class="left justify-content-center align-items-center d-flex">
+      <div class="form-blue">
+        <img
+          src="/assets/Login/log-Filet-O-Fish.png"
+          class="mb-5 img-responsive"
+        />
+        <p id="chao-ban-moi">Chào mừng bạn quay trở lại</p>
+        <div style="margin-top: 60px" class="text-center">
+          <p id="p-1">Nếu đã có tài khoản,</p>
+          <p id="p-2">Đăng nhập ngay</p>
+        </div>
+      </div>
+    </div>
+    <!-- ben phai-->
+    <div class="form-1">
+      <div class="row text-center justify-content-center align-items-center">
+        <P>Đăng ký</P>
+      </div>
+    </div>
+  </div>
+</body>
