Cập nhật trang catalog
- dựng khung cho trang catalog
- chưa thêm css -> WIP

--- a/frontend/src/app/catalog/catalog.component.html
+++ b/frontend/src/app/catalog/catalog.component.html
@@ -1,1 +1,23 @@
-<p>catalog works!</p>
+<div style="background-color: aquamarine;">
+    <div class="col-md-4 ps-5 pt-3" style="background-color: antiquewhite;">
+        <h3>CÁC LOẠI CÁ</h3>
+        <ul>
+            <li><a>Biển Ấn Độ Dương</a></li>
+            <li><a>Biển Thái Bình Dương</a></li>
+            <li><a>Biển Bắc Băng Dương</a></li>
+            <li><a>Biển Nam Đại Dương</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="card" style="width: 15rem;">
+    <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
+    <hr class="pt-2"/>
+    <div class="card-body">
+        <h5 class="card-title">Tên Cá</h5>
+        <div class="d-flex">
+            <p class="card-text">giá tiền</p>
+            <a href="#" class="btn btn-primary ms-5">Mua</a>
+        </div>
+    </div>
+</div>
