thêm chức năng đăng nhập, hiển thị chi tiết sản phẩm, tạo folder service

--- a/frontend/src/app/client/product-detail/product-detail.component.html
+++ b/frontend/src/app/client/product-detail/product-detail.component.html
@@ -3,15 +3,15 @@
     <!-- khung-trai -->
     <div class="khung-trai">
       <div class="wrapper-img">
-        <img class="img-change" src="/assets/product-detail/Ca_hoi.png" />
+        <img class="img-change" src="http://localhost:3800/ProductImages/{{pro.tenImageSP}}" />
       </div>
     </div>
     <!--khung-phai-->
     <div class="khung-phai">
-      <p class="p-change-1 mb-2">Cá Lông Lia thia</p>
-      <p class="p-change-1 mb-2">Đơn giá: 15.000Đ</p>
+      <p class="p-change-1 mb-2">{{pro.tenSP}}</p>
+      <p class="p-change-1 mb-2">{{pro.giaTien}}</p>
       <p class="p-change-1 mb-2">Tình trạng: Còn hàng</p>
-      <p class="p-change-1 mb-2">Đặc điểm nổi bật: Hay cắn nhau, sống riêng</p>
+      <p class="p-change-1 mb-2">Đặc điểm nổi bật: {{pro.moTa}}</p>
       <div class="d-flex" style="">
         <p class="p-change-1 me-5">Số lượng:</p>
         <div class="wrapper">
