--- a/frontend/src/app/client/product/product.component.html
+++ b/frontend/src/app/client/product/product.component.html
@@ -1,4 +1,5 @@
 <div *ngFor="let item of listSP">
+  <p>{{item._id}}</p>
   <p>{{item.tenSP}}</p>
   <p>{{item.moTa[0]}}</p>
   <p>{{item.moTa[1]}}</p>
@@ -8,4 +9,5 @@
   <p>{{item.soLuong}}</p>
   <p>{{item.giaTien}}</p>
   <img src="http://localhost:3800/ProductImages/{{item.hinhAnh[0].tenImageSP}}">
+  <button (click)="changeToDetailPage(item._id)">detail</button>
 </div>
