--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -11,28 +11,43 @@
   </ng-template>
 </ngb-carousel>
 
-<img src="../../../assets/images/client/homepage/bannerB1.png" class="image2 mt-5" />
+<img
+  src="../../../assets/images/client/homepage/bannerB1.png"
+  class="image2 mt-5"
+/>
 
 <!--tiêu đề-->
 <h1 class="h1 pb-5 pt-5">Các Giống Cá Đến Từ</h1>
 <div class="row">
   <div class="item">
-    <img src="../../../assets/images/client/homepage/andoduong.png" class="imageItem" />
+    <img
+      src="../../../assets/images/client/homepage/andoduong.png"
+      class="imageItem"
+    />
     <p class="tieudenho">Ấn Độ Dương</p>
     <p class="noidungnho">Cực kỳ đa dạng các loài cá nhiệt đới</p>
   </div>
   <div class="item">
-    <img src="../../../assets/images/client/homepage/thaibinhduong.png" class="imageItem" />
+    <img
+      src="../../../assets/images/client/homepage/thaibinhduong.png"
+      class="imageItem"
+    />
     <p class="tieudenho">Thái Bình Dương</p>
     <p class="noidungnho">Có nhiều rặng san hô đầy màu sắc</p>
   </div>
   <div class="item">
-    <img src="../../../assets/images/client/homepage/bacbangduong.png" class="imageItem" />
+    <img
+      src="../../../assets/images/client/homepage/bacbangduong.png"
+      class="imageItem"
+    />
     <p class="tieudenho">Bắc Băng Dương</p>
     <p class="noidungnho">Thường có những loài cá quý hiếm</p>
   </div>
   <div class="item">
-    <img src="../../../assets/images/client/homepage/namdaiduong.png" class="imageItem" />
+    <img
+      src="../../../assets/images/client/homepage/namdaiduong.png"
+      class="imageItem"
+    />
     <p class="tieudenho">Nam Đại Dương</p>
     <p class="noidungnho">
       Có nhiều loài cá rất được ưa chuộng vì đặc tính dễ nuôi
@@ -51,30 +66,13 @@
     <div class="d-flex justify-content-start" id="font-muasam">Mua Sắm</div>
     <p></p>
     <div class="row d-flex justify-content-between align-items-center h-100">
-      <div id="khung-item" style="margin-left: 110px">
-        <img src="/assets/Hompage/Cá_chúa_hề.png" alt=""  />
-        <p id="font-name">Cá Chúa hề</p>
-        <p id="font-gia">3.000Đ</p>
-      </div>
-      <div id="khung-item">
-        <img
-          src="/assets/Hompage/Cá_vây_nâu.png"
-          alt=""
-          style="margin-left: 60px; margin-bottom: 60px; margin-top: 20px"
-        />
-
-        <p id="font-name">Cá Vây Nâu</p>
-        <p id="font-gia">70.000Đ</p>
-      </div>
-      <div id="khung-item" style="margin-right: 110px">
-        <img
-          src="/assets/Hompage/Ca_nóc.png"
-          alt=""
-          style="margin-left: 50px; margin-bottom: 45px; margin-top: 20px"
-        />
-
-        <p id="font-name">Cá nóc</p>
-        <p id="font-gia">3.000Đ</p>
+      <div
+        id="khung-item"
+        *ngFor="let item of listSP | slice:12:1"
+      >
+        <img src ="http://localhost:3800/ProductImages/{{item.hinhAnh[0].tenImageSP}}"  />
+        <p id="font-name">{{item.tenSP}}</p>
+        <p id="font-gia">{{item.giaTien}}VND</p>
       </div>
     </div>
   </div>
