--- a/frontend/src/app/client/catalog/catalog.component.html
+++ b/frontend/src/app/client/catalog/catalog.component.html
@@ -1,23 +1,74 @@
-<div style="background-color: aquamarine;">
-    <div class="col-md-4 ps-5 pt-3" style="background-color: antiquewhite;">
+<div class="row align-items-center ps-5 pt-3">
+    <div class="col-sm-4">
         <h3>CÁC LOẠI CÁ</h3>
-        <ul>
-            <li><a>Biển Ấn Độ Dương</a></li>
-            <li><a>Biển Thái Bình Dương</a></li>
-            <li><a>Biển Bắc Băng Dương</a></li>
-            <li><a>Biển Nam Đại Dương</a></li>
+        <hr/>
+        <ul class ="p-0 m-0">
+            <li><a (click)="showImage(1); onClickItem(0)" [ngClass]="activeIndex === 0 ? 'selectedItem' : 'unseletedItem'"> Biển Ấn Độ Dương</a></li>
+            <li><a (click)="showImage(2); onClickItem(1)" [ngClass]="activeIndex === 1 ? 'selectedItem' : 'unseletedItem'">Biển Thái Bình Dương</a></li>
+            <li><a (click)="showImage(3); onClickItem(2)" [ngClass]="activeIndex === 2 ? 'selectedItem' : 'unseletedItem'">Biển Bắc Băng Dương</a></li>
+            <li><a (click)="showImage(4); onClickItem(3)" [ngClass]="activeIndex === 3 ? 'selectedItem' : 'unseletedItem'">Biển Nam Đại Dương</a></li>
         </ul>
+    </div>
+    <div class="col-sm-8" *ngIf="selectedImage">
+            <img [src]="selectedImage" class="images">
     </div>
 </div>
 
-<div class="card" style="width: 15rem;">
-    <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
-    <hr class="pt-2"/>
-    <div class="card-body">
-        <h5 class="card-title">Tên Cá</h5>
-        <div class="d-flex">
-            <p class="card-text">giá tiền</p>
-            <a href="#" class="btn btn-primary ms-5">Mua</a>
+
+
+<div class="container">
+    <div class="row row-cols-4">
+        <div class="col">
+            <div class="card" style="width: 15rem;">
+                <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
+                <hr class="pt-2"/>
+                <div class="card-body">
+                    <h5 class="card-title">Tên Cá</h5>
+                    <div class="d-flex">
+                        <p class="card-text">giá tiền</p>
+                        <a href="#" class="btn btn-primary ms-5">Mua</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 15rem;">
+                <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
+                <hr class="pt-2"/>
+                <div class="card-body">
+                    <h5 class="card-title">Tên Cá</h5>
+                    <div class="d-flex">
+                        <p class="card-text">giá tiền</p>
+                        <a href="#" class="btn btn-primary ms-5">Mua</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 15rem;">
+                <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
+                <hr class="pt-2"/>
+                <div class="card-body">
+                    <h5 class="card-title">Tên Cá</h5>
+                    <div class="d-flex">
+                        <p class="card-text">giá tiền</p>
+                        <a href="#" class="btn btn-primary ms-5">Mua</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 15rem;">
+                <img src="assets\images\client\homepage\Cá_hề.png" class="card-img-top">
+                <hr class="pt-2"/>
+                <div class="card-body">
+                    <h5 class="card-title">Tên Cá</h5>
+                    <div class="d-flex">
+                        <p class="card-text">giá tiền</p>
+                        <a href="#" class="btn btn-primary ms-5">Mua</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
