--- a/frontend/src/app/client/catalog/catalog.component.css
+++ b/frontend/src/app/client/catalog/catalog.component.css
@@ -2,6 +2,9 @@
     font-family: balloTamma;
     src: url(../../../assets/fonts/Baloo-Regular.ttf);
 }
+body{
+    background-color: #F6F4EC;
+}
 
 h3{
     color: #316CB7;
@@ -29,13 +32,54 @@ li a{
 .unseletedItem{
 color:#1C1B1F;
 }
-.row ps-5 pt-3{
-    margin-bottom: 32px;
-}
 
 .images{
     width: 900px;
     height: 500px;
     border-radius: 8px;
     margin-bottom: 32px;
+}
+
+
+.card a{
+    font-size: 18px;
+    text-decoration: none;
+    text-align: center;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: #4E81C2;
+    color: #F6F4EC;
+    box-shadow: 2px 2px;
+    height: 100%;
+    width: 100%;
+    transition-property: all;
+    transition-duration: .6s;
+    transition-timing-function: ease; 
+    color: white;
+    padding: .25em;
+    text-decoration: none;
+} 
+.card a:hover {
+        background: #437ac3;
+        color: rgb(223, 222, 220);
+    
+    } 
+
+.btn-3 {
+    background: lighten(#4E81C2, 3%);  
+    border: 1px solid darken(#4E81C2, 4%);
+    box-shadow: 0px 2px 0 darken(#4E81C2, 5%), 2px 4px 6px darken(#4E81C2, 2%);
+    font-weight: 900;
+    letter-spacing: 1px;
+    transition: all 150ms linear;
+}
+
+.btn-3:hover {
+    background: darken(#4E81C2, 1.5%);
+    border: 1px solid rgba(#000, .05);
+    box-shadow: 1px 1px 2px rgba(#fff, .2);
+    color: lighten(#4E81C2, 18%); 
+    text-decoration: none;
+    text-shadow: -1px -1px 0 darken(#4E81C2, 9.5%);
+    transition: all 250ms linear;
 }
